样式小修改

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,7 +56,7 @@
                 /*美化包 以上*/
                 .page {
                     position: relative;
-                    width: 900px;
+                    width:95%;
                     margin: 50px auto;
                 }
                 .page .title {
@@ -81,6 +81,7 @@
                 }
 
                 .page .content {
+
                     width: 660px;
                     margin: 0 auto;
                     border-style:solid;
@@ -177,13 +178,16 @@
         <!-- 协同写作业样式很好           -->
         <div style=" padding: 0px;
                 border:2px solid #5bc0de;
-                margin: 30px;height: 1700px">
+                height: 1700px">
             <div class="page">
                 <div class="title">协同英语写作系统</div>
-                <div class="editor" id="editor">
+                <div class="subtitle">协作区域</div>
+                <div class="editor" id="editor" style="">
                     <div class="editor-container" id="container"></div>
                 </div>
-                <div class="editor" id="reflection">
+                <div class="subtitle">反思区域</div>
+                <div class="editor" id="reflection" style="padding: 0px;
+                border:2px solid #5bc0de;">
                     <div class="editor-container" id="reflections"></div>
                 </div>
                 <div class="subtitle">内容总览</div>
