--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
         <head>
             <title>协同写作平台学生端</title>
             <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+            <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
             <!--美化包        -->
             <!--        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">-->
             <link rel="stylesheet" type="text/css" href="/blot/style-back.css">
@@ -108,7 +109,6 @@
                         s[pa[i].split("=")[0]] = unescape(pa[i].split("=")[1]);
                     }
                     // alert(s.name+"欢迎进行写作");
-                    $("#studentno").val(s.name);
                 })
             </script>
         </head>
